docs: update comments